--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="body-content"></div>
-    <script src="./bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
